--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -10,40 +10,62 @@
 
 \parindent = 0 pt
 \emergencystretch = 800 em
-\baselineskip = 18pt
-%\baselineskip = 16pt
-%\baselineskip = 12pt
 
-\font\FFba=      cmb10            at 8.5pt
-\font\FFbb=      cmb10            at 10pt
-\font\FFbc=      cmb10            at 12pt
-\font\FFbd=      cmb10            at 13pt
-\font\FFbe=      cmb10            at 16pt
-\font\FFbf=      cmb10            at 18pt
-\font\FFbg=      cmb10            at 24pt
+\font\FFba=      cmb10           at 5pt
+\font\FFbb=      cmb10           at 8.5pt
+\font\FFbc=      cmb10           at  9pt
+\font\FFbd=      cmb10           at 10pt
+\font\FFbe=      cmb10           at 11pt
+\font\FFbf=      cmb10           at 12pt
+\font\FFbg=      cmb10           at 13pt
+\font\FFbh=      cmb10           at 14pt
+\font\FFbi=      cmb10           at 16pt
+\font\FFbj=      cmb10           at 18pt
+\font\FFbk=      cmb10           at 20pt
+\font\FFbl=      cmb10           at 22pt
+\font\FFbm=      cmb10           at 24pt
 
-\font\FFra=      cmr10            at 8.5pt
-\font\FFrb=      cmr10            at 10pt
-\font\FFrc=      cmr10            at 12pt
-\font\FFrd=      cmr10            at 13pt
-\font\FFre=      cmr10            at 16pt
-\font\FFrf=      cmr10            at 18pt
-\font\FFrg=      cmr10            at 24pt
+\font\FFra=      cmr10           at 5pt
+\font\FFrb=      cmr10           at 8.5pt
+\font\FFrc=      cmr10           at  9pt
+\font\FFrd=      cmr10           at 10pt
+\font\FFre=      cmr10           at 11pt
+\font\FFrf=      cmr10           at 12pt
+\font\FFrg=      cmr10           at 13pt
+\font\FFrh=      cmr10           at 14pt
+\font\FFri=      cmr10           at 16pt
+\font\FFrj=      cmr10           at 18pt
+\font\FFrk=      cmr10           at 20pt
+\font\FFrl=      cmr10           at 22pt
+\font\FFrm=      cmr10           at 24pt
 
-\font\FFta=      cmti10           at 8.5pt
-\font\FFtb=      cmti10           at 10pt
-\font\FFtc=      cmti10           at 12pt
-\font\FFtd=      cmti10           at 13pt
-\font\FFte=      cmti10           at 16pt
-\font\FFtf=      cmti10           at 18pt
-\font\FFtg=      cmti10           at 24pt
+\font\FFta=      cmti10           at 5pt
+\font\FFtb=      cmti10           at 8.5pt
+\font\FFtc=      cmti10           at  9pt
+\font\FFtd=      cmti10           at 10pt
+\font\FFte=      cmti10           at 11pt
+\font\FFtf=      cmti10           at 12pt
+\font\FFtg=      cmti10           at 13pt
+\font\FFth=      cmti10           at 14pt
+\font\FFti=      cmti10           at 16pt
+\font\FFtj=      cmti10           at 18pt
+\font\FFtk=      cmti10           at 20pt
+\font\FFtl=      cmti10           at 22pt
+\font\FFtm=      cmti10           at 24pt
 
-\FFrd
 % { \smallbreak } 
 % { \medbreak } 
 % \vskip 10pt
 % { \bigbreak } 
 
+%  %  https://vim.fandom.com/wiki/Remove_unwanted_empty_lines
+%  %  Remove unwanted empty lines
 % g/^\_$\n\_^$/d
 % %s;\n\{3,};\r\r;g
+% v/\S/,/\S/-j
+
+% \FFri \baselineskip = 18pt
+% \FFrh \baselineskip = 16pt
+% \FFrf \baselineskip = 13pt
+  \FFre \baselineskip = 12pt
 
