--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -1,48 +1,12 @@
-\special{papersize=8.5in,11.5in}
+\input ../header/example_tex01.tex
 
-% % 0.4 padding
-% \hsize 7.7 in     % 8.5  - 0.4 * 2
-% \vsize 10.7 in    % 11.5 - 0.4 * 2
-% \voffset -0.6 in  % 1 - 0.4
-% \hoffset -0.6 in  % 1 - 0.4
-
-% 0.7 padding
-\hsize 7.1 in     % 8.5  - 0.7 * 2
-\vsize 10.1 in    % 11.5 - 0.7 * 2
-\voffset -0.3 in  % 1 - 0.7
-\hoffset -0.3 in  % 1 - 0.7
-
-% \hsize 6.9 in     % 8.5  - 0.8 * 2
-% \vsize 9.9 in     % 11.5 - 0.8 * 2
-% \special{papersize=8.5in,11.5in}
-% % 0.4 padding
-% \voffset -0.2 in  % 1 - 0.8
-% \hoffset -0.2 in  % 1 - 0.8
-
-\nopagenumbers
-
-\parindent = 0 pt
-\emergencystretch = 800 em
-%\tolerance=10000
-%\baselineskip = 16pt
-\baselineskip = 12pt
-
-
-\font\FFaa=      cmb10            at 24pt
-%\font\FFbb=      cmr10            at 8.5pt
-\font\FFbb=      cmr10            at 11pt
-\font\FFcc=      cmb10            at 13pt
-\font\FFdd=      cmb10            at 13pt
-\font\FFee=      cmti10           at 13pt
-
-
-\bigbreak
-
-\centerline{ \FFaa
+\centerline
+{ \FFbg
 Resume of Yanuo Deng (James)
 }
 
-\centerline{ \FFbb
+\centerline{ %\FFrb
+%{
 1565 Cress Way, Olivehurst,CA,95961
 *
 (408)444-5520
@@ -50,7 +14,7 @@ Resume of Yanuo Deng (James)
 deng.ya.nuo@gmail.com
 }
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 CAREER OBJECTIVE
 }
 
@@ -64,16 +28,16 @@ Integrated Circuit Engineer,
 Software Engineer,
 or Network Security Engineer.
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 EXPERIENCE
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 C-MATRIXTECH CO.LTD., Zhuhai, China, 3 people R\&D/6
 }
 
-{ \FFee
+{ \FFte
 Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
@@ -88,11 +52,11 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
  Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10k/M
 }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 VIOMI CO.LTD., Foshan, China, 3 people R\&D/200
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
@@ -103,44 +67,44 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
  Achieved smart wireless Speech Recognition module ; Mass production 3k/M
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*}
  FreeRTOS system migration for the embedded board, target for electric mowers
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 ADON CO.LTD., Foshan, China, 3 people R\&D/350
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
 }
 { \parindent = 1 em \item{*}
  Linux driver \& app for the Homepod (Wi-Fi speaker/charger for iPhone); Mass production, 3k/M
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D/500
 }
 
-{ \FFee
+{ \FFte
 Software Engineer, Dec 2011 - Jul 2013
 }
 { \parindent = 1 em \item{*}
  Windows Client App by C\#; Data API by C for the first order a meal Android App in China
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people R\&D/12
 }
 
-{ \FFee
+{ \FFte
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*}
@@ -154,17 +118,17 @@ Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 All IP cores verified by the SOC Chip
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 EDUCATION
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 XI'AN university of technology, Xi'an city, Shannxi, China
 
-{ \FFee
+{ \FFte
 Master of Science (M.S.) Microelectronics \& Solid State Electronics (Apr 2005)
 }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 ADDITIONAL SKILLS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
@@ -175,14 +139,14 @@ ADDITIONAL SKILLS
  Linux / FreeRTOS driver
  }
 
-{ \medbreak } { \FFdd
-Certifications
+{ \medbreak } { \FFbg
+CERTIFICATIONS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 Electronics Engineer Certification, Foshan , China , Aug 2008
 
-{ \medbreak } { \FFdd
-Personal Characteristics
+{ \medbreak } { \FFbg
+PERSONAL CHARACTERISTICS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 %I am a experienced software engineer in digital \& analog circuit design, and embedded system design.
@@ -194,14 +158,14 @@ I am committed to achieving goals set for me.
 I speak and write
 Cantonese/Mandarin.
 
-{ \medbreak } { \FFdd
-Referrals
+{ \medbreak } { \FFbg
+REFERRALS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 Dan Teuthorn, 
 Teledyne microwave solutions, VP engineering,
-+1-408-421-7303,
+408-421-7303,
 Den.Teuthorn@teledyne.com
 
 Tang Shanqiang,
@@ -212,7 +176,7 @@ ansent@cadence.com
 
 Stephen Fung,
 Atheros/Qualcomm , semicondutor Engineer,
-+1-408-338-5175,
+408-338-5175,
 stephen@thepoint.church
 
 % Arsenia Harrison,
@@ -226,7 +190,7 @@ stephen@thepoint.church
 % khinmienchong@gmail.com
 
 { \medbreak } 
-{ % \FFdd
+{ % \FFbg
 USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
 }
 
