--- a/src03_text_to_resume/cv_02241004am_eInfochips_designer_engineer_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02241004am_eInfochips_designer_engineer_2021_dengyanuo_cover_letter.tex
@@ -1,66 +1,4 @@
-\special{papersize=8.5in,11.5in}
-
-% % 0.4 padding 
-% \hsize 7.7 in     % 8.5  - 0.4 * 2
-% \vsize 10.7 in    % 11.5 - 0.4 * 2
-% \voffset -0.6 in  % 1 - 0.4
-% \hoffset -0.6 in  % 1 - 0.4
-
-% % 0.2 padding 
-% \hsize 6.9 in     % 8.5  - 0.8 * 2
-% \vsize 9.9 in     % 11.5 - 0.8 * 2
-% \voffset -0.2 in  % 1 - 0.8
-% \hoffset -0.2 in  % 1 - 0.8
-
-% % 0 padding 
-% \hsize 6.5 in     % 8.5  - 1 * 2
-% \vsize 9.5 in     % 11.5 - 1 * 2
-% \voffset 0 in  % 1 - 0
-% \hoffset 0 in  % 1 - 0
-
-
-% 0.7 padding
-\hsize 7.1 in     % 8.5  - 0.7 * 2
-\vsize 10.1 in    % 11.5 - 0.7 * 2
-\voffset -0.3 in  % 1 - 0.7
-\hoffset -0.3 in  % 1 - 0.7
-
-\nopagenumbers
-
-\parindent = 0 pt
-\emergencystretch = 800 em
-%\tolerance=10000
-\baselineskip = 18pt
-%\baselineskip = 16pt
-%\baselineskip = 12pt
-
-
-\font\FFba=      cmb10            at 8.5pt
-\font\FFbb=      cmb10            at 10pt
-\font\FFbc=      cmb10            at 12pt
-\font\FFbd=      cmb10            at 13pt
-\font\FFbe=      cmb10            at 16pt
-\font\FFbf=      cmb10            at 18pt
-\font\FFbg=      cmb10            at 24pt
-
-\font\FFra=      cmr10            at 8.5pt
-\font\FFrb=      cmr10            at 10pt
-\font\FFrc=      cmr10            at 12pt
-\font\FFrd=      cmr10            at 13pt
-\font\FFre=      cmr10            at 16pt
-\font\FFrf=      cmr10            at 18pt
-\font\FFrg=      cmr10            at 24pt
-
-\font\FFta=      cmti10           at 8.5pt
-\font\FFtb=      cmti10           at 10pt
-\font\FFtc=      cmti10           at 12pt
-\font\FFtd=      cmti10           at 13pt
-\font\FFte=      cmti10           at 16pt
-\font\FFtf=      cmti10           at 18pt
-\font\FFtg=      cmti10           at 24pt
-
-
-\FFrd
+\input ../header/example_tex01.tex
 
 {
 Yanuo Deng (James)
