--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -1,41 +1,4 @@
-\special{papersize=8.5in,11.5in}
-% % 0.4 padding 
-% \hsize 7.7 in     % 8.5  - 0.4 * 2
-% \vsize 10.7 in    % 11.5 - 0.4 * 2
-% \voffset -0.6 in  % 1 - 0.4
-% \hoffset -0.6 in  % 1 - 0.4
-
-% 0.7 padding
-\hsize 7.1 in     % 8.5  - 0.7 * 2
-\vsize 10.1 in    % 11.5 - 0.7 * 2
-\voffset -0.3 in  % 1 - 0.7
-\hoffset -0.3 in  % 1 - 0.7
-
-% \hsize 6.9 in     % 8.5  - 0.8 * 2
-% \vsize 9.9 in     % 11.5 - 0.8 * 2
-% \special{papersize=8.5in,11.5in}
-% % 0.4 padding 
-% \voffset -0.2 in  % 1 - 0.8
-% \hoffset -0.2 in  % 1 - 0.8
-
-\nopagenumbers
-
-\parindent = 0 pt
-\emergencystretch = 800 em
-%\tolerance=10000
-%\baselineskip = 16pt
-\baselineskip = 12pt
-
-
-\font\FFaa=      cmb10            at 24pt
-%\font\FFbb=      cmr10            at 8.5pt
-\font\FFbb=      cmr10            at 11pt
-\font\FFcc=      cmb10            at 13pt
-\font\FFdd=      cmb10            at 13pt
-\font\FFee=      cmti10           at 13pt
-
-
-\bigbreak
+\input ../header/example_tex01.tex
 
 \centerline{ \FFaa
 Resume of Yanuo Deng (James)
@@ -197,18 +160,31 @@ Referrals
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
+Dan Teuthorn, 
+Teledyne microwave solutions, VP engineering,
+408-421-7303,
+Den.Teuthorn@teledyne.com
+
+Tang Shanqiang,
+Cadence,
+Principal Application Engineer,
++65-90546301,
+ansent@cadence.com
+
 Stephen Fung,
 Atheros/Qualcomm , semicondutor Engineer,
-Church members,
 408-338-5175,
 stephen@thepoint.church
 
-Arsenia Harrison,
-One More Chance Company,
-CEO,
-counselor,
-916-271-3054,
-Arseniaharrison@aol.com
+% Arsenia Harrison,
+% One More Chance Company, CEO,
+% 916-271-3054,
+% Arseniaharrison@aol.com
+
+% Khinmien Chong, 
+% STATS ChipPAC Ltd.,
+% 408-819-8676,
+% khinmienchong@gmail.com
 
 { \medbreak } 
 { % \FFdd
