--- a/bak01/dt_02181409pm_2021_deng_ya_nuo_work_details.tex
+++ b/bak01/dt_02181409pm_2021_deng_ya_nuo_work_details.tex
@@ -1,10 +1,10 @@
 \input ../header/example_tex01.tex
 
-\centerline{ \FFaa
+\centerline{ \FFbg
 How to answer the questions in the interview.
 }
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 What's IP cores?
 } { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
@@ -20,7 +20,7 @@ Each IP core have about 10 modules and 3000 to 5000 lines.
 3 to 4 of them were testbechs, and the others are RTLs.
 
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 How to finish a IP core?
 } { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
@@ -55,7 +55,7 @@ If ok, the testbench, the netlist, and the timing rules can be sent to the backe
 
 
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 How to teach the new person?
 } { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
