--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -64,8 +64,9 @@
 % %s;\n\{3,};\r\r;g
 % v/\S/,/\S/-j
 
+  \FFre \baselineskip = 13pt
+% \FFrf \baselineskip = 14pt
+% \FFrg \baselineskip = 15pt
 % \FFri \baselineskip = 18pt
 % \FFrh \baselineskip = 16pt
-% \FFrf \baselineskip = 13pt
-  \FFre \baselineskip = 12pt
 
