--- a/src03_text_to_resume/cv_02181824pm_microchip_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02181824pm_microchip_2021_dengyanuo_cover_letter.tex
@@ -1,5 +1,9 @@
 \input ../header/example_tex01.tex
 
+% \FFrf \baselineskip = 14pt
+  \FFrg \baselineskip = 15pt
+
+
 {
 Yanuo Deng (James)
 }
@@ -32,7 +36,10 @@ deng.ya.nuo@gmail.com
 
 
 Shawn Taylor
+
 Associate Director at Microchip Technology, Roseville, CA
+
+\vskip 1 em
 
 { 
 Dear Shawn Taylor,
