--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -1,10 +1,10 @@
 \input ../header/example_tex01.tex
 
-\centerline{ \FFaa
+\centerline{ \FFbg
 Resume of Yanuo Deng (James)
 }
 
-\centerline{ \FFbb
+\centerline{ % \FFbb
 1565 Cress Way, Olivehurst,CA,95961
 *
 (408)444-5520
@@ -12,7 +12,7 @@ Resume of Yanuo Deng (James)
 deng.ya.nuo@gmail.com
 }
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 CAREER OBJECTIVE
 }
 
@@ -26,16 +26,16 @@ Integrated Circuit Engineer,
 Software Engineer, 
 or Network Security Engineer.
 
-{ \medbreak } { \FFcc
+{ \medbreak } { \FFbg
 EXPERIENCE
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 C-MATRIXTECH CO.LTD., Zhuhai, China, 3 person R\&D/6
 }
 
-{ \FFee
+{ \FFte
 Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
@@ -50,11 +50,11 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
  Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10 per month.
 }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 VIOMI CO.LTD., Foshan, China, 3 person R\&D/200
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
@@ -65,44 +65,44 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
  Achieved smart wireless Speech Recognition module ; Mass production 3k per month.
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 BLUEWAY CO.LTD., Huizhou, China, 5 person R\&D/2500
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*} 
  FreeRTOS system migration for the embedded board, target for electric mowers.
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 ADON CO.LTD., Foshan, China, 3 person R\&D/350
 }
 
-{ \FFee
+{ \FFte
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
 }
 { \parindent = 1 em \item{*} 
  Linux driver \& app for the Homepod (wifi speaker/charger for iPhone); Mass production, 3k per month.
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 SKYIT SOFTWARE CO.LTD., Shunde, China, 5 person R\&D/500
 }
 
-{ \FFee
+{ \FFte
 Software Engineer, Dec 2011 - Jul 2013
 }
 { \parindent = 1 em \item{*} 
  Windows Client App by C\#; Data API by C for the first order a meal App in China
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 person R\&D/12
 }
 
-{ \FFee
+{ \FFte
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*} 
@@ -115,17 +115,17 @@ Digital Integrated Circuit Engineer, Apr 2005 - May 2008
  All IP cores include specification, testbench, RTL; All IP cores verified by the SOC Chip
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 EDUCATION
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 XI'AN university of technology, Xi'an city, Shannxi, China
 
-{ \FFee
+{ \FFte
 Master of Science (M.S.) Microelectronics \& Solidstate Electronics (Apr 2005)
 }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 ADDITIONAL SKILLS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
@@ -136,13 +136,13 @@ ADDITIONAL SKILLS
  Linux / FreeRTOS driver
  }
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 Certifications
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 Electronics Engineer Certification, Foshan , China , Aug 2008
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 Personal Characteristics
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
@@ -155,7 +155,7 @@ I am committed to achieving goals set for me.
 I speak and write 
 Cantonese/Mandarin.
 
-{ \medbreak } { \FFdd
+{ \medbreak } { \FFbg
 Referrals
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
@@ -187,8 +187,9 @@ stephen@thepoint.church
 % khinmienchong@gmail.com
 
 { \medbreak } 
-{ % \FFdd
-USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
+{ % \FFbg
+USA Employment Authorization Document(EAD) valided from 2021 to 2023.
+No work sponsor is needed.
 }
 
 \break
