--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -191,7 +191,8 @@ stephen@thepoint.church
 
 { \medbreak } 
 { % \FFbg
-USA Employment Authorization Document(EAD) valided from Feb 2021 to Feb 2023.
+USA Employment Authorization Document(EAD) valided from 2021 to 2023.
+No work sponsor is needed.
 }
 
 \break
