--- a/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02152147pm_2021_dengyanuo_resume.tex
@@ -161,7 +161,7 @@ Referrals
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 Dan Teuthorn, 
-Teledyne microwave solutions, VP engineering,
+Teledyne microwave solutions, VP engineer,
 408-421-7303,
 Den.Teuthorn@teledyne.com
 
@@ -172,7 +172,7 @@ Principal Application Engineer,
 ansent@cadence.com
 
 Stephen Fung,
-Atheros/Qualcomm , semicondutor Engineer,
+Atheros/Qualcomm , semicondutor engineer,
 408-338-5175,
 stephen@thepoint.church
 
