--- a/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02181536pm_2021_dengyanuo_resume.tex
@@ -164,7 +164,7 @@ REFERRALS
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 Dan Teuthorn, 
-Teledyne microwave solutions, VP engineering,
+Teledyne microwave solutions, VP engineer,
 408-421-7303,
 Den.Teuthorn@teledyne.com
 
@@ -175,7 +175,7 @@ Principal Application Engineer,
 ansent@cadence.com
 
 Stephen Fung,
-Atheros/Qualcomm , semicondutor Engineer,
+Atheros/Qualcomm , semicondutor engineer,
 408-338-5175,
 stephen@thepoint.church
 
