--- a/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
@@ -57,9 +57,18 @@ which give me some advantage at bootloader  /  driver developing .
 { \bigbreak } 
 I have WiFi driver developing / debug experience. 
 I wrote UDP sender / receiver by FPGA leading me know every bit in the network transport layer.
-I use git  /  gnumake  /  bash  /  perl  /  sed  /  grep  /  vim as my deverloping tools.
+I use git  /  gnumake  /  bash  /  perl  /  sed  /  grep  /  vim as my developing tools.
 During prototype developing, I use mathematica / Golang / perl, 
 while Golang / C / verilog / FPGA will be used to verify the system.
+
+{ \bigbreak } 
+A living example : I wrote a Makefile last week to help in generating my resumes from \TeX to PDF : 
+
+\centerline{
+https://github.com/dengyanuo/tex\_resume/blob/main/Makefile
+}
+
+The interviewer can know whether I am a qualified C developer under linux by it.
 
 { \bigbreak } 
 I hope my background meets your needs and I look
