--- a/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
@@ -57,7 +57,14 @@ which give me some advantage at bootloader  /  driver developing .
 { \bigbreak } 
 I have WiFi driver developing / debug experience. 
 I wrote UDP sender / receiver by FPGA leading me know every bit in the network transport layer.
+
+{ \bigbreak } 
 I use git  /  gnumake  /  bash  /  perl  /  sed  /  grep  /  vim as my developing tools.
+
+{ \bigbreak } 
+I use OpenWRT / buildroot to build custom base system. I haven't used Yocto .
+
+{ \bigbreak } 
 During prototype developing, I use mathematica / Golang / perl, 
 while Golang / C / verilog / FPGA will be used to verify the system.
 
