http://www.tug.org/TUGboat/Articles/tb21-3/

--- a/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
@@ -44,7 +44,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \parindent = 1 em \item{*}
- MCU debug; Port C-language from Assembly for the MCU; Analog circuit design
+ MCU debug; Port C-language from Assembly for the MCU; Mixed (Analog) circuit design
 }
 { \parindent = 1 em \item{*}
  Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10k/M
