--- a/src03_text_to_resume/cv_02251043am_Embedded_software_engineer_for_HP_Hewlett_Packard_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02251043am_Embedded_software_engineer_for_HP_Hewlett_Packard_2021_dengyanuo.tex
@@ -40,7 +40,7 @@ I am applying for the position of `` Embedded Software Engineer '' in your estee
 
 { \bigbreak } 
 I believe I am the right candidate for the position .
-I have a MSc in Microelectronics \& Solid State Electronics.
+I have a MSc in Semiconductor.
 My 15+ years of experience, among others, 
 includes a dual-MIPS SOC chip designing ,
 Linux kernel triming/driver porting , 
@@ -77,7 +77,7 @@ in linux device drivers or FreeRTOS drivers.
 
 { \bigbreak } 
 During prototype developing, I use mathematica/Golang/perl, 
-while Golang/~C/verilog/FPGA will be used to verify the system.
+while Golang/C/verilog/-FPGA will be used to verify the system.
 
 { \bigbreak } 
 A living example : I wrote a Makefile last week to help in generating my resumes from \TeX to PDF : 
