--- a/src03_text_to_resume/cv_02241004am_eInfochips_designer_engineer_2021_dengyanuo_cover_letter.tex
+++ b/src03_text_to_resume/cv_02241004am_eInfochips_designer_engineer_2021_dengyanuo_cover_letter.tex
@@ -44,7 +44,7 @@ Dear Hiring Manager
 I am applying for the position of ``Design Engineer'' in your esteemed eInfochips company.
 
 { \bigbreak } 
-I believe I am the right candidate for the position as I have a MSc in Microelectronics \& Solid State Electronics.
+I believe I am the right candidate for the position as I have a MSc in Semiconductor.
 My 15+ years of experience, among others, 
 includes designing a dual-MIPS SOC with a Security Engine inside. 
 I wrote all the IP cores consisting of AES, DES, 3DES, MD5, SHA1, CRC 
