--- a/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02242041pm_Embedded_software_engineer_for_Aruba_networks_2021_dengyanuo.tex
@@ -35,7 +35,7 @@ I am applying for the position of `` Embedded Software Engineer '' in your estee
 
 { \bigbreak } 
 I believe I am the right candidate for the position .
-I have a MSc in Microelectronics \& Solid State Electronics.
+I have a MSc in Semiconductor.
 My 15+ years of experience, among others, 
 includes a dual-MIPS SOC chip designing ,
 Linux kernel triming  /  driver porting , 
