--- a/src03_text_to_resume/cv_02251015am_Coreboot_Firmware_Engineer_82802_AMD_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02251015am_Coreboot_Firmware_Engineer_82802_AMD_2021_dengyanuo.tex
@@ -38,7 +38,7 @@ I am applying for the position of `` Coreboot / Firmware Engineer - 82802 '' in 
 
 { \bigbreak } 
 I believe I am the right candidate for the position .
-I have a MSc in Microelectronics \& Solid State Electronics.
+I have a MSc in Semiconductor.
 My 15+ years of experience, among others, 
 includes a dual-MIPS SOC chip designing ,
 Linux kernel triming  /  driver porting , 
