--- a/src03_text_to_resume/cv_02242251pm_Embedded_Developer_Gaurav_Baweja_2021_dengyanuo.tex
+++ b/src03_text_to_resume/cv_02242251pm_Embedded_Developer_Gaurav_Baweja_2021_dengyanuo.tex
@@ -39,8 +39,8 @@ I believe I am the right candidate for the position .
 I have a MSc in Semiconductor.
 My 15+ years of experience, among others, 
 includes a dual-MIPS SOC chip designing ,
-Linux kernel triming  /  driver porting , 
-FreeRTOS driver porting  /  task coding,
+Linux kernel triming/driver porting , 
+FreeRTOS driver porting/task coding,
 and bootloader coding.
 
 { \bigbreak } 
@@ -51,19 +51,19 @@ with the SOC passing at first tapeout
 with a US patent awarded.
 
 { \bigbreak } 
-During developing  /  porting device drivers for Linux / FreeRTOS,
+During developing/porting device drivers for Linux/FreeRTOS,
 I know what happened inside the CPU when writing to the registers,
-which give me some advantage at bootloader  /  driver developing .
+which give me some advantage at bootloader/driver developing .
 
 { \bigbreak } 
-I have WiFi driver developing / debug experience. 
-I wrote UDP sender / receiver by FPGA leading me know every bit in the network transport layer.
+I have WiFi driver developing/debug experience. 
+I wrote UDP sender/receiver by FPGA leading me know every bit in the network transport layer.
 
 { \bigbreak } 
-I use git  /  gnumake  /  bash  /  perl  /  sed  /  grep  /  vim as my developing tools.
+I use git/gnumake/bash/perl/sed/grep/vim as my developing tools.
 
 { \bigbreak } 
-I use OpenWRT / buildroot to build custom base system. I haven't used Yocto .
+I use OpenWRT/buildroot to build custom base system. I haven't used Yocto .
 
 { \bigbreak } 
 The SPI, I2C, UART, PWM generators and Ethernet, are IP cores in my eyes.
@@ -72,8 +72,8 @@ and I know how to operate them in most efficient mothod
 in linux device drivers or FreeRTOS drivers.
 
 { \bigbreak } 
-During prototype developing, I use mathematica / Golang / perl, 
-while Golang / C / verilog / FPGA will be used to verify the system.
+During prototype developing, I use mathematica/Golang/perl, 
+while Golang/C/verilog/-FPGA will be used to verify the system.
 
 { \bigbreak } 
 A living example : I wrote a Makefile last week to help in generating my resumes from \TeX to PDF : 
