--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -68,6 +68,8 @@
   \vrule height -3pt depth 3.4pt width \dimen0
 }}
 % Example \filltospace{5em}{12-25-2014}
+% \char124
+% \char254
 
 
 %  %  https://vim.fandom.com/wiki/Remove_unwanted_empty_lines
