--- a/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
+++ b/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
@@ -1,30 +1,70 @@
+,\char254,
 \input ../header/example_tex01.tex
 
 Embedded Software Engineer for Aruba Networks
 
 Embedded Software Engineer (Roseville, CA - Zip 95757) 
 
-Location - Roseville, CA (Need someone local and willing to go into the office/lab a few days per week)
+\halign{ #& # &#\hfil\cr
+Location 
+& * &
+Roseville, CA (Need someone local and willing to go into the office/lab a few days per week) 
+\cr
 
-Base Salary \- \$130,000 to \$150,000 max 
+Base Salary 
+& * &
+\$130,000 to \$150,000 max 
+\cr
 
-RSUs \- \$5,100 which vest over three years (1/3 at the end of each year)
+RSUs 
+& * &
+\$5,100 which vest over three years (1/3 at the end of each year)
+\cr
 
-Bonus - Discretionary bonus
+Bonus 
+& * &
+Discretionary bonus
+\cr
 
-Sign on Bonus - Depends on the candidate
+Sign on Bonus 
+&*&
+Depends on the candidate
+\cr
 
-Sponsorship - Willing to sponsor OPT/F1 candidates and transfer H1B visas
+Sponsorship 
+&*&
+Willing to sponsor OPT/F1 candidates and transfer H1B visas
+\cr
 
-Relocation Assistance - Yes for the right candidate.  Addressed via sign\-on bonus
+Relocation Assistance 
+&*&
+Yes for the right candidate.  Addressed via sign\-on bonus
+\cr
 
-Interview Process - 3 Interviews (combination of phone and video)
+Interview Process 
+&*&
+3 Interviews (combination of phone and video)
+\cr
 
-Reason for Openings - New positions due to growth
+Reason for Openings 
+&*&
+New positions due to growth
+\cr
 
-Benefits - Medical, dental, vision, life AD\&D, 401k, long term care
+Benefits 
+&*&
+Medical, dental, vision, life AD\&D, 401k, long term care
+\cr
 
-Team/Group - This group designs, develops, troubleshoots, and debugs embedded software for Aruba wired switch products.  Determines hardware compatibility and/or influences hardware design
+Team/Group 
+&*&
+This group designs, develops, troubleshoots, and debugs embedded software for 
+
+Aruba wired switch products.  Determines hardware compatibility and/or influences hardware design
+\cr
+}
+
+\bigbreak
 
 Must Haves:
 
