--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -71,6 +71,17 @@
 % \char124
 % \char254
 
+\def\tablerule{\noalign{\hrule}}
+% \def\tableskip{\omit&height 9pt&&&\omit\cr}
+% \def\tableskip{\cr}
+% \def\tableskip{\vskip 1em \cr}
+% \def\tableskip{ --- \cr === \cr }
+% \def\tableskip{\omit&height 9pt&&&\omit\cr}
+% \def\tableskip{ --- & === \cr }
+% \def\tableskip{\vskip 1em \cr}
+% \def\tableskip{~\cr}
+  \def\tableskip{~\cr}
+
 
 %  %  https://vim.fandom.com/wiki/Remove_unwanted_empty_lines
 %  %  Remove unwanted empty lines
@@ -88,3 +99,4 @@
 % \FFrl \baselineskip = 24pt
 % \FFrm \baselineskip = 26pt
 
+% \parskip 1.5 em
