--- a/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
+++ b/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
@@ -1,73 +1,78 @@
-,\char254,
 \input ../header/example_tex01.tex
 
 Embedded Software Engineer for Aruba Networks
 
 Embedded Software Engineer (Roseville, CA - Zip 95757) 
 
-\halign{ #& # &#\hfil\cr
+\halign{ 
+#& \vrule ~ \vtop{\hsize = 34em # } \cr
+
+~\cr
+
 Location 
-& * &
+&
 Roseville, CA (Need someone local and willing to go into the office/lab a few days per week) 
-\cr
+\cr ~ \cr
 
 Base Salary 
-& * &
+&
 \$130,000 to \$150,000 max 
-\cr
+\cr ~ \cr
 
 RSUs 
-& * &
+&
 \$5,100 which vest over three years (1/3 at the end of each year)
-\cr
+\cr ~ \cr
 
 Bonus 
-& * &
+&
 Discretionary bonus
-\cr
+\cr ~ \cr
 
 Sign on Bonus 
-&*&
+&
 Depends on the candidate
-\cr
+\cr ~ \cr
 
 Sponsorship 
-&*&
+&
 Willing to sponsor OPT/F1 candidates and transfer H1B visas
-\cr
+\cr ~ \cr
 
 Relocation Assistance 
-&*&
+&
 Yes for the right candidate.  Addressed via sign\-on bonus
-\cr
+\cr ~ \cr
 
 Interview Process 
-&*&
+&
 3 Interviews (combination of phone and video)
-\cr
+\cr ~ \cr
 
 Reason for Openings 
-&*&
+&
 New positions due to growth
-\cr
+\cr ~ \cr
 
 Benefits 
-&*&
+&
 Medical, dental, vision, life AD\&D, 401k, long term care
-\cr
+\cr ~ \cr
 
 Team/Group 
-&*&
+&
 This group designs, develops, troubleshoots, and debugs embedded software for 
 
 Aruba wired switch products.  Determines hardware compatibility and/or influences hardware design
-\cr
+\cr 
 }
 
-\bigbreak
+\medbreak
+\parskip 0.4 em
 
 Must Haves:
 
+{\parindent 2em
 3+ years of C Programming experience
 
 Embedded software development experience
@@ -77,9 +82,11 @@ Design/architecture of software systems for embedded hardware/firmware
 Testing and debugging skills
 
 Bachelor’s degree in Computer Science, Information Systems, or equivalent
+}
 
 Pluses:
 
+{\parindent 2em
 Networking technologies and product experience
 
 GIT version control
@@ -87,9 +94,11 @@ GIT version control
 Strong understanding of product life cycles
 
 Python
+}
 
 Day to Day:
 
+{\parindent 2em
 Responsible for developing, updating, and enhancing subsystems and portions of switch software using C and Python
 
 Analyze designs to determine programming, coding, and integration needs based on product, solution, or architecture knowledge
@@ -97,10 +106,13 @@ Analyze designs to determine programming, coding, and integration needs based on
 Writing and executing test plans, protocols, and documentation
 
 Responsible for software systems design status updates, problem resolution, and project progress
+}
 
 Please let me know either way if you're interested or know of someone who may be!
 
+\filltospace{8em}{
 Jackson Hufferd
+}
 
 Senior Executive Recruiter at CyberCoders\- Hiring!
 
