--- a/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
+++ b/src03_text_to_resume/job_02241555pm_Embedded_Software_Engineer_for_Aruba_Networks_2021.tex
@@ -5,7 +5,7 @@ Embedded Software Engineer for Aruba Networks
 Embedded Software Engineer (Roseville, CA - Zip 95757) 
 
 \halign{ 
-#& \vrule ~ \vtop{\hsize = 34em # } \cr
+\hfil#& \vrule ~ \vtop{\hsize = 34em # } \cr
 
 ~\cr
 
