--- a/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_02240952am_2021_dengyanuo_resume.tex
@@ -73,8 +73,11 @@ BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*}
- FreeRTOS system migration to STM32 for the embedded board, target for electric mowers
- }
+ FreeRTOS system migration to STM32 for the embedded board, target for electric mowers.
+}
+{ \parindent = 1 em \item{*}
+Using Mathematica to optimize the walking path of the mowers, to add some AI.
+}
 
 { \medbreak } { \FFbg
 ADON CO.LTD., Foshan, China, 3 people R\&D/350
