--- a/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
+++ b/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
@@ -4,24 +4,24 @@
 \FFrk \baselineskip = 22pt
 
 
-I am not familiar with Michigan... Especially with living conditions. But it is cold though.
-
-However, few things to keep in mind:
-
-A) there are different neighbourhoods within a city/area, so one can find relatively "safe" places... But all places have risks and rewards.. God's grace and protection keeps us.
-
-B) I doubt Omni will set up in an unsafe place?
-
-C) when is your family coming over? Here already? Maybe consider moving alone there first to check out?
-
-D) it may be your wife that decides etc, but no need to be so transparent in your communication ... Easily misunderstood and used against you. Just say what you want in the least amount of words with the least explanations in a professional environment.
-
-E) check if this is a 3-4 mtg job... If they have hired someone already, and want to hire you, will they replace you when the other guy is ready? Or will they drip the other guy after hiring him before he even come on board? Seems like a very strange hiring behavior
-
-F) regardless, one way to consider this, it is a small step to get hired into the industry. Once you have a US company job experience, the next opportunity may be slightly easier? So within reasons, consider first, get the offer, then decide if you want it or not?
+\par I am not familiar with Michigan... Especially with living conditions. But it is cold though.
+\par \smallbreak       %------======== 
+\par However, few things to keep in mind:
+\par \smallbreak       %------======== 
+\par A) there are different neighbourhoods within a city/area, so one can find relatively "safe" places... But all places have risks and rewards.. God's grace and protection keeps us.
+\par \smallbreak       %------======== 
+\par B) I doubt Omni will set up in an unsafe place?
+\par \smallbreak       %------======== 
+\par C) when is your family coming over? Here already? Maybe consider moving alone there first to check out?
+\par \smallbreak       %------======== 
+\par D) it may be your wife that decides etc, but no need to be so transparent in your communication ... Easily misunderstood and used against you. Just say what you want in the least amount of words with the least explanations in a professional environment.
+\par \smallbreak       %------======== 
+\par E) check if this is a 3-4 mtg job... If they have hired someone already, and want to hire you, will they replace you when the other guy is ready? Or will they drip the other guy after hiring him before he even come on board? Seems like a very strange hiring behavior
+\par \smallbreak       %------======== 
+\par F) regardless, one way to consider this, it is a small step to get hired into the industry. Once you have a US company job experience, the next opportunity may be slightly easier? So within reasons, consider first, get the offer, then decide if you want it or not?
 
 \vfil
-\break
+\break %%%%%%%%%%%%%%%%%%% page break
 
 \parskip 0.5 em
 %\FFrh \baselineskip = 16pt
@@ -31,14 +31,14 @@ F) regardless, one way to consider this, it is a small step to get hired into th
 \par INTERVIEW :: ASIC Firmware Engineer @ OmniVision Technology
 \par Dear Yanuo
 \par My name is Meetu Naithani , Technical Staffing Manager at OmniVision Technology . We are actively hiring "ASIC Firmware Engineer" for our Farmington Hills, Michigan location. Let me know your interest....
-\par 
+\par \smallbreak       %------======== 
 \par Fulltime Role- ASIC Firmware Engineer (level open)
 \par Location – Detroit, Michigan
 \par KEY RESPONSIBILITIES
 \par • Develop firmware to bring-up and validate ASIC features
 \par • Review Customer requirement review (SOW) and evaluate the feasibility
 \par • Identify and help resolve ASIC, board and firmware issues, provide diagnostics support to automotive customers and internal engineer teams
-\par 
+\par \smallbreak       %------======== 
 \par EXPERIENCE AND SKILLS
 \par • A minimum of 3 years of experience on diagnostic, driver or embedded SW development and closely interact with HW designers
 \par • Strong mix of software development ability and hardware understanding
@@ -49,5 +49,26 @@ F) regardless, one way to consider this, it is a small step to get hired into th
 \par • Automotive SPICE related experience is preferred.
 \par • Strong debugging and testing skills
 \par • Strong communication skills
+
 \vfil
+\break %%%%%%%%%%%%%%%%%%% page break
+
+\par \smallbreak       %------======== 
+\par Hi Yanuo (James) -
+\par Phone Interview has been scheduled for you. Please find the details below:
+\par \smallbreak       %------======== 
+\par Day,Date :: Thursday, 03/04/2021
+\par Time :: 3:30pm- 4:00pm PST
+\par Interviewer:: Brian Hetke, Sr. FAE Manager
+\par Job Title :: Sr/Staff ASIC Firmware Engineer
+\par \smallbreak       %------======== 
+\par \smallbreak       %------======== 
+\par Please acknowledge the message receipt.
+\par \smallbreak       %------======== 
+\par Meetu
+\par \smallbreak       %------======== 
+\par \smallbreak       %------======== 
+\par Meetu Naithani
+\vfil
+
 \bye
