--- a/src01_tex/esl559_2021_0306_1646pm.tex
+++ b/src01_tex/esl559_2021_0306_1646pm.tex
@@ -37,5 +37,36 @@
 \par 6. How can you find the actual keywords that potential employers may use to find you on LinkedIn? Give an example of how to do this.
 \par 7. Why is it important to not include too many skills on your LinkedIn profile? How can you find the best skills to list?
 
+1. You should use a professional photo or a working photo.
+Because you are hunting a job, you should be more professional.
+
+2. The current or last work's title.
+The employers will search, and the Linkedin will matched by the keywords.
+All the keywords should be related to the target position "accounting".
+
+3.
+How much are your skills and your experences matched the target position.
+
+4.
+The cover image on the Linkedin profile should be a 1584 (w) x 396 (h) pixels png/jpg file ,
+which related to your professional work.
+First, related to your professional work ; 
+Second, unique and instering.
+
+5.
+The profile summary is about how about your past experences and what's your new target position.
+That help the employer(s) to match and decide whether you are the qualified candidate.
+Your skills, your experences, your target positon.
+
+6.
+Your skills being used in your professional work would be the best keywords in your profile to attract the employers.
+For example : if you want a firmware engineer position, you can add a keywork "linux driver developer" into your profile.
+The reason is : the employer knows the software engineer with "linux driver developer" is very experenced and can do most works in linux world.
+
+7.
+The Linkedin allows max 32 keywords.
+In most cases 16 keywords is good.
+All the important skills that will be used in your professional work should be shown.
+
 
 \bye
