--- a/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
+++ b/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
@@ -69,6 +69,17 @@
 \par \smallbreak       %------======== 
 \par \smallbreak       %------======== 
 \par Meetu Naithani
-\vfil
+
+%\vfil
+%\parskip 2.5 em
+\vskip 12.5 em
+
+\par Time – Sunday, 03/07/2021 at 5:30 pm PST
+\par Interviewer – Jacky Wang, Sr. Director of Applications
+\par Join Zoom Meeting
+\par https://ovt.zoom.us/j/98492024524?pwd=cC84bVVXWGphT1ZxKzE4SnNuOERlUT09
+\par Meeting ID: 984 9202 4524
+\par Passcode: 854990
+
 
 \bye
